--- a/index.html
+++ b/index.html
@@ -1,7 +1,314 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <title>Portfolio Website-Terrence</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://kit.fontawesome.com/392662b82e.js" crossorigin="anonymous"></script>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
+        <div class="container">
+            <a class="navbar-brand" href="#">Terrence Liu</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#home"> Home </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about"> About </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#education"> Education </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#skills"> Skills/Coursework </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#services"> Experiences </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#portfolio"> Projects </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact"> Contact </a>
+                    </li>
+                </ul>
+                
+            </div>
+        </div>
+    </nav>
+    <!-- main banner -->
+    <section class="bgimage" id="home">
+        <div class="container-fluid">
+            <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
+                <h2 class="hero_title">Hi, I'm Terrence</h2>
+                <p class="hero_desc">I am studying Computer Science at Cal Poly SLO</p>
+            </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- about section-->
+    <section id="about">
+        <div class="small-container">
+            <br>
+            <h1 class="text-center">About Me</h1>
+            <div class="row mt-4">
+                <div class="col-lg-4">
+                    <img src="images/about.jpeg" class= "imageAboutPage" alt="">
+                </div>
+
+                <div class="col-lg-8">
+                    <p> I'm a developer with experience in programming with different languages. I push myself to learn more about programming by creatively solving problems.<br><br>
+                        I enjoy traveling, hiking, skiing, foods, and learning new things!
+                    </p>
+                </div>
+            </div>
+            <br>
+    </section>
+
+    <section id="education">
+        <div class="smaller-container">
+            <h1 class="text-center">Education</h1>
+            <br>
+                    <div class="card servicesText">
+                        <div class="card-body">
+                            <h4 class="card-title">BS in Computer Science</h4>
+                            <i class="text">California Polytechnic State University, San Luis Obispo<br>09/2020 – 06/2024</i> 
+                            <p class="card-text"><br>GPA: 3.84
+                                <br>
+                                <br>
+                                - Computer Science and Artificial Intelligence Club: Member, 2021 - Present 
+                            </p>
+                        </div>
+                    </div>
+        </div>
+    </section>
+
+    <section id="skills"><br>
+
+        <div class="small-container">
+            <h1 class="text-center">Skills/Coursework</h1>
+            <br>
+            <div class="row">
+                <div class="col-lg-6 mt-6">
+                    <div class="card smallNonServicesText">
+                        <div class="card-body">
+                            <h4 class="card-title mt-3">Skills</h4>
+                            <p class="card-text mt-3">- Python<br>- Java<br>- C<br>
+                            </p>
+                        </div>
+                    </div>  
+                </div>
+                <br>
+                <div class="col-lg-6 mt-6">
+                    <div class="card smallNonServicesText">
+                        <div class="card-body">
+                            <h4 class="card-title mt-3">Coursework</h4>
+                            <p class="card-text mt-3">Data Structures, Object-Oriented Programming, Introduction to Computer Organization, System Programming, Discrete Structures, Calculus & Physics Series, Linear Algebra, Computer Architecture, Design & Analysis of Algorithms
+                            </p>
+                        </div>
+                    </div>  
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- services section-->
+    <section id="services">
+        <div class="small-container">
+            <br>
+            <h1 class="text-center">Experiences</h1>
+            <br>
+                    <div class="card servicesText">
+                        <div class="card-body">
+                            <h4 class="card-title">Kennedy Library</h4>
+                            <i class="text">10/2021 – Present</i> 
+                            <p class="card-text"><br>Student Assistant: Work as a team to operate library serving all university students and faculty.
+                                <br>
+                                <br>
+                                - Sorting books, assist patrons with material requests and resource check-outs
+                                <br>
+                                - Demostrate self-responsibility, multi-tasking, and organization
+                            </p>
+                        </div>
+                    </div>
+                    <br>  
+                    <div class="card servicesText">
+                        <div class="card-body">
+                            <h4 class="card-title">Best In Class Education Center</h4>
+                            <i class="text">09/2018 – 07/2020</i> 
+                            <p class="card-text"><br>Teaching Assistant at a educational tutoring center primary for Math and English enrichment in a small group setting. As a teaching assistant, I had the following role:
+                                <br>
+                                <br>
+                                - Collaborated as four-person team to smoothly run tutoring center serving 20 students per class
+                                <br>
+                                - Demonstrated proper time-management skills by balancing grading homework packets and in-class tests, printing and filing of next-week's packets, care of students, assisting teachers with Math and English
+                                <br>
+                                - Developed communication skills by answering phone calls and questions from parents
+                                <br>
+                                - Selected as “Teacher Assistant of the Quarter” for outstanding performance
+                            </p>
+                        </div>
+                        <br>
+                    </div>
+                    <br>  
+                    <div class="card servicesText">
+                        <div class="card-body">
+                            <h4 class="card-title">Camp Parsons, Boy Scouts of America</h4>
+                            <i class="text">06/2018 – 09/2018</i> 
+                            <p class="card-text"><br>At a Boy Scout Summer Camp (Brinnon, WA), not only did I work at the trading post as a cashier, but I also lived and interacted with scouts. I helped monitor scouts for their safety. As my primary role is a cashier, I had the following role:
+                                <br>
+                                <br>
+                                - Worked with three-person team to efficiently run camp store, serving 200 customers per day
+                                <br>
+                                - Demonstrated accountability with operation of cash register, restocking items, and cleaning
+                                <br>
+                                - Ensured that guests receive warm welcome at store and experience quick checkout
+                                <br>
+                                - Received “Order of the Silver Marmot” honor for full time commitment at camp
+                            </p>
+                        </div>
+                    </div>  
+                    <br>
+                    <div class="card servicesText">
+                        <div class="card-body">
+                            <h4 class="card-title">Titan Robotics</h4>
+                            <i class="text">School Year 2018 – 2019</i> 
+                            <p class="card-text"><br>As a member of the robotics club, I was tasked with maintaining an operable robot during robot practice time and competition
+                                <br>
+                                <br>
+                                - Attended daily meetings throughout on/off season to diagnose and fix robot using hand and power tools
+                                <br>
+                                - Competed in all competitions, requires robot to be problem free for every match with custom solutions
+                                <br>
+                                - Required teamwork with mentors and students, assisted in directing builds on robot
+                                <br>
+                                - Awarded Varsity Letter and Rising Star Award
+                            </p>
+                        </div>
+                    </div> 
+                    <br> 
+        </div>
+    </section>
+
+    <!-- portfolio section-->
+    <section id="portfolio">
+        <div class="container mt-3">
+            <h1 class="text-center">Projects</h1>
+            <div class="row">
+                <div class="col-lg-4 mt-4">
+                    <div class="card">
+                        <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
+                        <div class="card-body">
+                            <h4 class="card-title">Cops and Robber</h4>
+                            <p class="card-text">An interactive game coded in Java: player collect and deliver money to bank without touching police. Implemented search algorithms including A-Star search and used Object-Oriented Programming</p>
+                            <div class="text-center">
+                                <a href="https://github.com/terrencekliu/Cops-and-Robber-Project.git" class="btn btn-success">Link</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 mt-4">
+                    <div class="card portfolioContent">
+                        <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                        <div class="card-body">
+                            <h4 class="card-title">Basic Shell</h4>
+                            <p class="card-text">Programmed a simple shell program in C: can accept many inputs to do a variety of shell tasks in Unix. Knowledge of Unix System: child processes, signal masks/handlers, pipes</p>
+                            <div class="text-center">
+                                <a href="https://github.com/terrencekliu/Basic-Shell.git" class="btn btn-success">Link</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 mt-4">
+                    <div class="card portfolioContent">
+                        <img class="card-img-top" src="images/portfolioImage3.jpg" alt="Card image" style="width:100%">
+                        <div class="card-body">
+                            <h4 class="card-title">MyTalk Chat</h4>
+                            <p class="card-text">mytalk is a program that allows a user on one machine to send and receive messages from another user on another machine. The program splits the screen into two parts, receiver/sender. </p>
+                            <div class="text-center">
+                                <a href="https://github.com/terrencekliu/MyTalk-Chat.git" class="btn btn-success">Link</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 mt-4">
+                    <div class="card portfolioContent">
+                        <img class="card-img-top" src="images/portfolioImage2.jpg" alt="Card image" style="width:100%">
+                        <div class="card-body">
+                            <h4 class="card-title">myTAR ARchive</h4>
+                            <p class="card-text">This project is to build a basic file archiving tool, mytar, relating to Tape ARchive. It bundles files and directories together in a single file for easy transfer.</p>
+                            <div class="text-center">
+                                <a href="https://github.com/terrencekliu/TAR-Archiver.git" class="btn btn-success">Link</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+
+    <!-- contact section-->
+    <section id="contact"><br>
+
+        <div class="xsmall-container">
+            <h1 class="text-center">Contact</h1>
+            <br>
+            <div class="row">
+                <div class="col-lg-12 mt-12">
+                    <div class="card smallNonServicesText">
+                        <div class="card-body">
+                            <h4 class="card-title mt-3">Terrence Liu</h4>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-1"><i class="fas fa-envelope"></i></div>
+                                    <div class="col-9"><a href="mailto:tliu29@calpoly.edu"> tliu29@calpoly.edu</a></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-1"><i class="fab fa-github"></i></div>
+                                    <div class="col-9"><a href="https://github.com/terrencekliu">terrencekliu</a></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-1"><i class="fab fa-linkedin"></i></div>
+                                    <div class="col-9"><a href="https://linkedin.com/in/terrencekliu">Terrence Liu</a></div>
+                                </div>
+                            <div>
+                        </div>
+                    </div>  
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- footer section-->
+    <footer id="footer">
+        <div class="container-fluid">
+            <!-- social media icons -->
+            <div class="social-icons mt-2">
+                <a href="https://github.com/terrencekliu" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://linkedin.com/in/terrencekliu" target="_blank"><i class="fab fa-linkedin"></i></a>
+            </div>
+        </div>
+    </footer>
+
+    <!-- load javascript after loading all html content -->
+    <script src="script/script.js"></script>
+
 </body>
+
 </html>
