--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 
                 <div class="col-lg-8">
                     <p> I'm a developer with experience in programming with different languages. I push myself to learn more about programming by creatively solving problems.<br><br>
-                        I enjoy traveling, hiking, skiing, foods, and learning new things!
+                        I love hands-on projects and working with different people! I'm a quick learner and very self-motivated.<br><br>
+                        During my free time, I enjoy traveling, hiking, skiing, foods, photography, and learning new things!
                     </p>
                 </div>
             </div>
@@ -109,6 +110,7 @@
                             </p>
                         </div>
                     </div>  
+                    <br>
                 </div>
                 <br>
                 <div class="col-lg-6 mt-6">
@@ -188,7 +190,7 @@
                             <p class="card-text"><br>As a member of the robotics club, I was tasked with maintaining an operable robot during robot practice time and competition
                                 <br>
                                 <br>
-                                - Attended daily meetings throughout on/off season to diagnose and fix robot using hand and power tools
+                                - Attended daily meetings throughout on/off seasons to diagnose and fix robot using hand and power tools
                                 <br>
                                 - Competed in all competitions, requires robot to be problem free for every match with custom solutions
                                 <br>
@@ -207,8 +209,8 @@
         <div class="container mt-3">
             <h1 class="text-center">Projects</h1>
             <div class="row">
-                <div class="col-lg-4 mt-4">
-                    <div class="card">
+                <div class="col-lg-6 mt-6">
+                    <div class="card portfolioContent">
                         <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">Cops and Robber</h4>
@@ -218,9 +220,11 @@
                             </div>
                         </div>
                     </div>
+                    <br>
+
                 </div>
 
-                <div class="col-lg-4 mt-4">
+                <div class="col-lg-6 mt-6">
                     <div class="card portfolioContent">
                         <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
@@ -231,9 +235,10 @@
                             </div>
                         </div>
                     </div>
+                    <br>
                 </div>
 
-                <div class="col-lg-4 mt-4">
+                <div class="col-lg-6 mt-6">
                     <div class="card portfolioContent">
                         <img class="card-img-top" src="images/portfolioImage3.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
@@ -244,15 +249,15 @@
                             </div>
                         </div>
                     </div>
+                    <br>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 mt-4">
+            
+                <div class="col-lg-6 mt-6">
                     <div class="card portfolioContent">
                         <img class="card-img-top" src="images/portfolioImage2.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">myTAR ARchive</h4>
-                            <p class="card-text">This project is to build a basic file archiving tool, mytar, relating to Tape ARchive. It bundles files and directories together in a single file for easy transfer.</p>
+                            <p class="card-text">This project is a basic file archiving tool, mytar, which relates to the old Tape ARchive. The .tar archive bundles files and directories together in a single file for easy transfer.</p>
                             <div class="text-center">
                                 <a href="https://github.com/terrencekliu/TAR-Archiver.git" class="btn btn-success">Link</a>
                             </div>
@@ -260,6 +265,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </section>
 
     <!-- contact section-->
