--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Portfolio Website-Terrence</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -117,7 +118,7 @@
                     <div class="card smallNonServicesText">
                         <div class="card-body">
                             <h4 class="card-title mt-3">Coursework</h4>
-                            <p class="card-text mt-3">Data Structures, Object-Oriented Programming, Introduction to Computer Organization, System Programming, Discrete Structures, Calculus & Physics Series, Linear Algebra, Computer Architecture, Design & Analysis of Algorithms
+                            <p class="card-text mt-3">Data Structures, Object-Oriented Programming, Introduction to Computer Organization, System Programming, Discrete Structures, Calculus & Physics Series, Linear Algebra, Computer Architecture, Design & Analysis of Algorithms, Intro. to Software Engineering, Programming Languages
                             </p>
                         </div>
                     </div>  
@@ -134,8 +135,17 @@
             <br>
                     <div class="card servicesText">
                         <div class="card-body">
+                            <h4 class="card-title">Amazon</h4>
+                            <i class="text">04/2022 – Present</i> 
+                            <p class="card-text"><br>Jr. Software Developer at San Luis Obispo
+                            </p>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="card servicesText">
+                        <div class="card-body">
                             <h4 class="card-title">Kennedy Library</h4>
-                            <i class="text">10/2021 – Present</i> 
+                            <i class="text">10/2021 – 03/2022</i> 
                             <p class="card-text"><br>Student Assistant: Work as a team to operate library serving all university students and faculty.
                                 <br>
                                 <br>
@@ -162,7 +172,6 @@
                                 - Selected as “Teacher Assistant of the Quarter” for outstanding performance
                             </p>
                         </div>
-                        <br>
                     </div>
                     <br>  
                     <div class="card servicesText">
