--- a/index.html
+++ b/index.html
@@ -107,7 +107,13 @@
                     <div class="card smallNonServicesText">
                         <div class="card-body">
                             <h4 class="card-title mt-3">Skills</h4>
-                            <p class="card-text mt-3">- Python<br>- Java<br>- C<br>
+                            <p class="card-text mt-3">
+                              <ul>
+                                <li>Python</li>
+                                <li>Java</li>
+                                <li>JavaScript</li>
+                                <li>C</li>
+                              </ul>
                             </p>
                         </div>
                     </div>  
@@ -149,9 +155,10 @@
                             <p class="card-text"><br>Student Assistant: Work as a team to operate library serving all university students and faculty.
                                 <br>
                                 <br>
-                                - Sorting books, assist patrons with material requests and resource check-outs
-                                <br>
-                                - Demostrate self-responsibility, multi-tasking, and organization
+                                <ul>
+                                  <li>Sorting books, assist patrons with material requests and resource check-outs</li>
+                                  <li>Demostrate self-responsibility, multi-tasking, and organization</li>
+                                </ul>
                             </p>
                         </div>
                     </div>
@@ -163,13 +170,12 @@
                             <p class="card-text"><br>Teaching Assistant at a educational tutoring center primary for Math and English enrichment in a small group setting. As a teaching assistant, I had the following role:
                                 <br>
                                 <br>
-                                - Collaborated as four-person team to smoothly run tutoring center serving 20 students per class
-                                <br>
-                                - Demonstrated proper time-management skills by balancing grading homework packets and in-class tests, printing and filing of next-week's packets, care of students, assisting teachers with Math and English
-                                <br>
-                                - Developed communication skills by answering phone calls and questions from parents
-                                <br>
-                                - Selected as “Teacher Assistant of the Quarter” for outstanding performance
+                                <ul>
+                                  <li>Collaborated as four-person team to smoothly run tutoring center serving 20 students per class</li>
+                                  <li>Demonstrated proper time-management skills by balancing grading homework packets and in-class tests, printing and filing of next-week's packets, care of students, assisting teachers with Math and English</li>
+                                  <li>Developed communication skills by answering phone calls and questions from parents</li>
+                                  <li>Selected as “Teacher Assistant of the Quarter” for outstanding performance</li>
+                                </ul>
                             </p>
                         </div>
                     </div>
@@ -181,13 +187,12 @@
                             <p class="card-text"><br>At a Boy Scout Summer Camp (Brinnon, WA), not only did I work at the trading post as a cashier, but I also lived and interacted with scouts. I helped monitor scouts for their safety. As my primary role is a cashier, I had the following role:
                                 <br>
                                 <br>
-                                - Worked with three-person team to efficiently run camp store, serving 200 customers per day
-                                <br>
-                                - Demonstrated accountability with operation of cash register, restocking items, and cleaning
-                                <br>
-                                - Ensured that guests receive warm welcome at store and experience quick checkout
-                                <br>
-                                - Received “Order of the Silver Marmot” honor for full time commitment at camp
+                                <ul>
+                                  <li>Worked with three-person team to efficiently run camp store, serving 200 customers per day</li>
+                                  <li>Demonstrated accountability with operation of cash register, restocking items, and cleaning</li>
+                                  <li>Ensured that guests receive warm welcome at store and experience quick checkout</li>
+                                  <li>Received “Order of the Silver Marmot” honor for full time commitment at camp</li>
+                                </ul>
                             </p>
                         </div>
                     </div>  
@@ -199,13 +204,12 @@
                             <p class="card-text"><br>As a member of the robotics club, I was tasked with maintaining an operable robot during robot practice time and competition
                                 <br>
                                 <br>
-                                - Attended daily meetings throughout on/off seasons to diagnose and fix robot using hand and power tools
-                                <br>
-                                - Competed in all competitions, requires robot to be problem free for every match with custom solutions
-                                <br>
-                                - Required teamwork with mentors and students, assisted in directing builds on robot
-                                <br>
-                                - Awarded Varsity Letter and Rising Star Award
+                                <ul>
+                                  <li>Attended daily meetings throughout on/off seasons to diagnose and fix robot using hand and power tools</li>
+                                  <li>Competed in all competitions, requires robot to be problem free for every match with custom solutions</li>
+                                  <li>Required teamwork with mentors and students, assisted in directing builds on robot</li>
+                                  <li>Awarded Varsity Letter and Rising Star Award</li>
+                                </ul>
                             </p>
                         </div>
                     </div> 
