Optimize images and add alternative text

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h1 class="text-center">About Me</h1>
         <div class="row mt-4">
             <div class="col-lg-4">
-                <img src="images/about.jpeg" class="imageAboutPage" alt="">
+                <img src="images/about.jpeg" class="imageAboutPage" alt="Profile picture of Terrence">
             </div>
 
             <div class="col-lg-8">
@@ -80,6 +80,7 @@
             </div>
         </div>
         <br>
+    </div>
 </section>
 
 <section id="education">
@@ -240,7 +241,8 @@
         <div class="row">
             <div class="col-lg-6 mt-6">
                 <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="images/portfolioImage1.jpeg" alt="Screenshot of Cops and Robber game"
+                         style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title">Cops and Robber</h4>
                         <p class="card-text">An interactive game coded in Java: player collect and deliver money to bank
@@ -258,7 +260,8 @@
 
             <div class="col-lg-6 mt-6">
                 <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="images/portfolioImage4.jpeg" alt="Screenshot of Basic Shell"
+                         style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title">Basic Shell</h4>
                         <p class="card-text">Programmed a simple shell program in C: can accept many inputs to do a
@@ -274,7 +277,8 @@
 
             <div class="col-lg-6 mt-6">
                 <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/portfolioImage3.jpg" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="images/portfolioImage3.jpeg" alt="Screenshot of My Talk Chat"
+                         style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title">MyTalk Chat</h4>
                         <p class="card-text">Mytalk is a program that allows a user on one machine to send and receive
@@ -290,7 +294,8 @@
 
             <div class="col-lg-6 mt-6">
                 <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/portfolioImage2.jpg" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="images/portfolioImage2.jpeg" alt="Screenshot of my Tar"
+                         style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title">myTAR Archive</h4>
                         <p class="card-text">This project is a basic file archiving tool, myTar, which relates to the
@@ -336,7 +341,8 @@
                     </div>
                 </div>
             </div>
-
+        </div>
+    </div>
 </section>
 
 <!-- footer section-->
