--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <script src="https://kit.fontawesome.com/392662b82e.js" crossorigin="anonymous"></script>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DDZHHVJSL9"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-DDZHHVJSL9');
+</script>
+
 <body>
 <!-- navbar -->
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
