--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <meta name="google-site-verification" content="1QQUTZDcWqglnN8qvv8KR6cXUVcS_K3TD4aR9XDIejE" />
+    <meta name="google-site-verification" content="1QQUTZDcWqglnN8qvv8KR6cXUVcS_K3TD4aR9XDIejE"/>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -16,7 +16,11 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DDZHHVJSL9"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+
     gtag('js', new Date());
 
     gtag('config', 'G-DDZHHVJSL9');
@@ -83,9 +87,13 @@
 
             <div class="col-lg-8">
                 <p> I'm a developer with experience in programming with different languages. I push myself to learn more
-                    about programming by creatively solving problems.<br><br>
+                    about programming by creatively solving problems.
+                </p>
+                <p>
                     I love hands-on projects and working with different people! I'm a quick learner and very
-                    self-motivated.<br><br>
+                    self-motivated.
+                </p>
+                <p>
                     During my free time, I enjoy traveling, hiking, skiing, foods, photography, and learning new things!
                 </p>
             </div>
@@ -100,13 +108,10 @@
         <br>
         <div class="card servicesText">
             <div class="card-body">
-                <h4 class="card-title">BS in Computer Science</h4>
-                <i class="text">California Polytechnic State University, San Luis Obispo<br>09/2020 – 06/2024</i>
-                <p class="card-text"><br>GPA: 3.84
-                    <br>
-                    <br>
-                    - Computer Science and Artificial Intelligence Club: Member, 2021 - Present
-                </p>
+                <h5 class="card-title">California Polytechnic State University - San Luis Obispo, CA</h5>
+                <i class="text">Bachelor's degree, Computer Science</i><br>
+                <i class="text-secondary">Sept 2020 – Mar 2024</i>
+                <p class="card-text"><br>GPA: 3.86</p>
             </div>
         </div>
     </div>
@@ -159,23 +164,36 @@
         <br>
         <div class="card servicesText">
             <div class="card-body">
-                <h4 class="card-title">Amazon</h4>
-                <i class="text">04/2022 – Present</i>
-                <p class="card-text"><br>Jr. Software Developer at San Luis Obispo
-                </p>
+                <h4 class="card-title">Jr. Software Developer</h4>
+                <i class="text-secondary">
+                    Amazon • Part-time School, Full-time Summer<br>
+                    Apr 2022 – Present<br>
+                    San Luis Obispo, CA
+                </i>
+                <p class="card-text"><br>Work in a team to maintain and update backend and frontend of Publisher
+                    Experience of Amazon Books</p>
+                <ul>
+                    <li>Fix bugs, complete unfinished features, add features that improve user experience</li>
+                    <li>Migrate and integrate backend service with existing code to Amazon Web Services</li>
+                </ul>
             </div>
         </div>
         <br>
         <div class="card servicesText">
             <div class="card-body">
-                <h4 class="card-title">Kennedy Library</h4>
-                <i class="text">10/2021 – 03/2022</i>
-                <p class="card-text"><br>Student Assistant: Work as a team to operate library serving all university
+                <h4 class="card-title">Student Assistant at Kennedy Library</h4>
+                <i class="text-secondary">
+                    Cal Poly SLO • Part-time<br>
+                    Oct 2021 – Mar 2022 • 6 mos<br>
+                    San Luis Obispo, CA
+                </i>
+                <i class="text"></i>
+                <p class="card-text"><br>Work as a team to operate library serving all university
                     students and faculty.
                     <br>
                 <ul>
                     <li>Sorting books, assist patrons with material requests and resource check-outs</li>
-                    <li>Demostrate self-responsibility, multi-tasking, and organization</li>
+                    <li>Demonstrate self-responsibility, multi-tasking, and organization</li>
                 </ul>
                 </p>
             </div>
@@ -183,8 +201,12 @@
         <br>
         <div class="card servicesText">
             <div class="card-body">
-                <h4 class="card-title">Best In Class Education Center</h4>
-                <i class="text">09/2018 – 07/2020</i>
+                <h4 class="card-title">Teaching Assistant</h4>
+                <i class="text-secondary">
+                    Best In Class Education • Part-time<br>
+                    Sep 2018 – Aug 2020 • 2 yrs<br>
+                    Issaquah, WA
+                </i>
                 <p class="card-text"><br>Teaching Assistant at a educational tutoring center primary for Math and
                     English enrichment in a small group setting. As a teaching assistant, I had the following role:
                     <br>
@@ -204,9 +226,13 @@
         <br>
         <div class="card servicesText">
             <div class="card-body">
-                <h4 class="card-title">Camp Parsons, Boy Scouts of America</h4>
-                <i class="text">06/2018 – 09/2018</i>
-                <p class="card-text"><br>At a Boy Scout Summer Camp (Brinnon, WA), not only did I work at the trading
+                <h4 class="card-title">Camp Staff and Cashier</h4>
+                <i class="text-secondary">
+                    Boy Scouts of America, Camp Parsons • Full-time<br>
+                    Jun 2018 – Aug 2018 • 3 mons<br>
+                    Brinnon, WA
+                </i>
+                <p class="card-text"><br>At a Boy Scout Summer Camp, not only did I work at the trading
                     post as a cashier, but I also lived and interacted with scouts. I helped monitor scouts for their
                     safety. As my primary role is a cashier, I had the following role:
                     <br>
@@ -222,8 +248,12 @@
         <br>
         <div class="card servicesText">
             <div class="card-body">
-                <h4 class="card-title">Titan Robotics</h4>
-                <i class="text">School Year 2016 – 2020</i>
+                <h4 class="card-title">Technician and Mechanic for Titan Robotics</h4>
+                <i class="text-secondary">
+                    International School Robotics Club • Part-time<br>
+                    Sep 2016 – Jun 2020 • 3 yrs 10 mos<br>
+                    Bellevue, WA
+                </i>
                 <p class="card-text"><br>As a member of the robotics club, I was tasked with maintaining an operable
                     robot during robot practice time and competition
                     <br>
