--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
             <div class="col-lg-4">
                 <picture>
                     <source srcset="images/avif/about.avif" type="image/avif" class="imageAboutPage">
-                    <img src="images/jpeg/about.jpeg" alt="Profile picture of Terrence" class="imageAboutPage">
+                    <img src="images/jpeg/about.jpeg" srcset="images/jpeg/about.jpeg" alt="Profile picture of Terrence"
+                         class="imageAboutPage">
                 </picture>
             </div>
 
@@ -288,8 +289,8 @@
                     <picture>
                         <source srcset="images/avif/portfolioImage1.avif" type="image/avif" class="card-img-top"
                                 style="width:100%">
-                        <img src="images/jpeg/portfolioImage1.jpeg" alt="Screenshot of Cops and Robber game"
-                             class="card-img-top" style="width:100%">
+                        <img src="images/jpeg/portfolioImage1.jpeg" srcset="images/jpeg/portfolioImage1.jpeg"
+                             alt="Screenshot of Cops and Robber game" class="card-img-top" style="width:100%">
                     </picture>
                     <div class="card-body">
                         <h4 class="card-title">Cops and Robber</h4>
@@ -311,8 +312,8 @@
                     <picture>
                         <source srcset="images/avif/portfolioImage4.avif" type="image/avif" class="card-img-top"
                                 style="width:100%">
-                        <img src="images/jpeg/portfolioImage4.jpeg" alt="Screenshot of Basic Shell" class="card-img-top"
-                             style="width:100%">
+                        <img src="images/jpeg/portfolioImage4.jpeg" srcset="images/jpeg/portfolioImage4.jpeg"
+                             alt="Screenshot of Basic Shell" class="card-img-top" style="width:100%">
                     </picture>
                     <div class="card-body">
                         <h4 class="card-title">Basic Shell</h4>
@@ -332,8 +333,8 @@
                     <picture>
                         <source srcset="images/avif/portfolioImage3.avif" type="image/avif" class="card-img-top"
                                 style="width:100%">
-                        <img src="images/jpeg/portfolioImage3.jpeg" alt="Screenshot of My Talk Chat"
-                             class="card-img-top" style="width:100%">
+                        <img src="images/jpeg/portfolioImage3.jpeg" srcset="images/jpeg/portfolioImage3.jpeg"
+                             alt="Screenshot of My Talk Chat" class="card-img-top" style="width:100%">
                     </picture>
                     <div class="card-body">
                         <h4 class="card-title">MyTalk Chat</h4>
@@ -353,8 +354,8 @@
                     <picture>
                         <source srcset="images/avif/portfolioImage2.avif" type="image/avif" class="card-img-top"
                                 style="width:100%">
-                        <img src="images/jpeg/portfolioImage2.jpeg" alt="Screenshot of my Tar" class="card-img-top"
-                             style="width:100%">
+                        <img src="images/jpeg/portfolioImage2.jpeg" srcset="images/jpeg/portfolioImage2.jpeg"
+                             alt="Screenshot of my Tar" class="card-img-top" style="width:100%">
                     </picture>
                     <div class="card-body">
                         <h4 class="card-title">myTAR Archive</h4>
