Revert avif image support

--- a/index.html
+++ b/index.html
@@ -82,11 +82,7 @@
         <h1 class="text-center">About Me</h1>
         <div class="row mt-4">
             <div class="col-lg-4">
-                <picture>
-                    <source srcset="images/avif/about.avif" type="image/avif" class="imageAboutPage">
-                    <img src="images/jpeg/about.jpeg" srcset="images/jpeg/about.jpeg" alt="Profile picture of Terrence"
-                         class="imageAboutPage">
-                </picture>
+                <img src="images/about.jpeg" class="imageAboutPage" alt="Profile picture of Terrence">
             </div>
 
             <div class="col-lg-8">
@@ -286,12 +282,8 @@
         <div class="row">
             <div class="col-lg-6 mt-6">
                 <div class="card portfolioContent">
-                    <picture>
-                        <source srcset="images/avif/portfolioImage1.avif" type="image/avif" class="card-img-top"
-                                style="width:100%">
-                        <img src="images/jpeg/portfolioImage1.jpeg" srcset="images/jpeg/portfolioImage1.jpeg"
-                             alt="Screenshot of Cops and Robber game" class="card-img-top" style="width:100%">
-                    </picture>
+                    <img class="card-img-top" src="images/portfolioImage1.jpeg" alt="Screenshot of Cops and Robber game"
+                         style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title">Cops and Robber</h4>
                         <p class="card-text">An interactive game coded in Java: player collect and deliver money to bank
@@ -309,12 +301,8 @@
 
             <div class="col-lg-6 mt-6">
                 <div class="card portfolioContent">
-                    <picture>
-                        <source srcset="images/avif/portfolioImage4.avif" type="image/avif" class="card-img-top"
-                                style="width:100%">
-                        <img src="images/jpeg/portfolioImage4.jpeg" srcset="images/jpeg/portfolioImage4.jpeg"
-                             alt="Screenshot of Basic Shell" class="card-img-top" style="width:100%">
-                    </picture>
+                    <img class="card-img-top" src="images/portfolioImage4.jpeg" alt="Screenshot of Basic Shell"
+                         style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title">Basic Shell</h4>
                         <p class="card-text">Programmed a simple shell program in C: can accept many inputs to do a
@@ -330,12 +318,8 @@
 
             <div class="col-lg-6 mt-6">
                 <div class="card portfolioContent">
-                    <picture>
-                        <source srcset="images/avif/portfolioImage3.avif" type="image/avif" class="card-img-top"
-                                style="width:100%">
-                        <img src="images/jpeg/portfolioImage3.jpeg" srcset="images/jpeg/portfolioImage3.jpeg"
-                             alt="Screenshot of My Talk Chat" class="card-img-top" style="width:100%">
-                    </picture>
+                    <img class="card-img-top" src="images/portfolioImage3.jpeg" alt="Screenshot of My Talk Chat"
+                         style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title">MyTalk Chat</h4>
                         <p class="card-text">Mytalk is a program that allows a user on one machine to send and receive
@@ -351,12 +335,8 @@
 
             <div class="col-lg-6 mt-6">
                 <div class="card portfolioContent">
-                    <picture>
-                        <source srcset="images/avif/portfolioImage2.avif" type="image/avif" class="card-img-top"
-                                style="width:100%">
-                        <img src="images/jpeg/portfolioImage2.jpeg" srcset="images/jpeg/portfolioImage2.jpeg"
-                             alt="Screenshot of my Tar" class="card-img-top" style="width:100%">
-                    </picture>
+                    <img class="card-img-top" src="images/portfolioImage2.jpeg" alt="Screenshot of my Tar"
+                         style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title">myTAR Archive</h4>
                         <p class="card-text">This project is a basic file archiving tool, myTar, which relates to the
