--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
                         <ul>
                             <li>Kotlin</li>
                             <li>JavaScript/TypeScript</li>
+                            <li>Angular</li>
+                            <li>SwiftUI/SwiftData</li>
                             <li>Python</li>
                             <li>Java</li>
                             <li>C</li>
@@ -147,7 +149,9 @@
                             Organization, System Programming, Discrete Structures, Calculus & Physics Series, Linear
                             Algebra, Computer Architecture, Design & Analysis of Algorithms, Intro. to Software
                             Engineering, Programming Languages, Software Engineering, Computer Security, Database
-                            Systems, Distributed Computing, Operating Systems, Theory of Computation
+                            Systems, Distributed Computing, Operating Systems, Theory of Computation, Artificial
+                            Intelligence, Intro. to Privacy, Autonomous Mobile Robotics, Database Modlng/Dsgn/Implement
+                            Wireless Security
                         </p>
                     </div>
                 </div>
@@ -175,6 +179,7 @@
                 <ul>
                     <li>Fix bugs, complete unfinished features, add features that improve user experience</li>
                     <li>Migrate and integrate backend service with existing code to Amazon Web Services</li>
+                    <li>Work with stakeholders to develop frontend proof-of-concept for publishers</li>
                 </ul>
             </div>
         </div>
