--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://kit.fontawesome.com/392662b82e.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/e936d961f9.js" crossorigin="anonymous"></script>
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -150,7 +150,7 @@
                             Algebra, Computer Architecture, Design & Analysis of Algorithms, Intro. to Software
                             Engineering, Programming Languages, Software Engineering, Computer Security, Database
                             Systems, Distributed Computing, Operating Systems, Theory of Computation, Artificial
-                            Intelligence, Intro. to Privacy, Autonomous Mobile Robotics, Database Modlng/Dsgn/Implement
+                            Intelligence, Intro. to Privacy, Autonomous Mobile Robotics, Database Modlng/Dsgn/Implement,
                             Wireless Security
                         </p>
                     </div>
@@ -285,6 +285,31 @@
         <h1 class="text-center">Projects</h1>
         <br>
         <div class="row">
+            <div class="col-lg-12 mt-6">
+                <div class="card portfolioContent">
+                    <img class="card-img-top" src="images/tumblerAsset.jpeg" alt="Screenshot of Tumbler iOS app Sketch"
+                         style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Tumbler iOS App</h4>
+                        <p class="card-text">Tumbler is a iOS mobile trip planning application. The app aims to simplify
+                            itinerary organization, providing an intuitive and user-friendly interface. Users can plan
+                            and share their itineraries in real-time, with features such as map integration, bulk import
+                            for past trips, travel time considerations, and event alerts. Tumbler focuses on enhancing
+                            the user experience by making trip planning easy, efficient, and collaborative. Part of Cal
+                            Poly Senior Project.
+                        </p>
+                        <div class="text-center">
+                            <a href="https://github.com/terrencekliu/TumblerApp.git"
+                               class="btn btn-success">Link</a>
+                        </div>
+                    </div>
+                </div>
+                <br>
+            </div>
+        </div>
+
+        <div class="row">
+
             <div class="col-lg-6 mt-6">
                 <div class="card portfolioContent">
                     <img class="card-img-top" src="images/portfolioImage1.jpeg" alt="Screenshot of Cops and Robber game"
@@ -301,7 +326,6 @@
                     </div>
                 </div>
                 <br>
-
             </div>
 
             <div class="col-lg-6 mt-6">
