Add tinyFileSystem project

--- a/index.html
+++ b/index.html
@@ -309,51 +309,18 @@
         </div>
 
         <div class="row">
-
             <div class="col-lg-6 mt-6">
                 <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/portfolioImage1.jpeg" alt="Screenshot of Cops and Robber game"
+                    <img class="card-img-top" src="images/portfolioImage3.png" alt="Screenshot of My tinyFileSystem"
                          style="width:100%">
                     <div class="card-body">
-                        <h4 class="card-title">Cops and Robber</h4>
-                        <p class="card-text">An interactive game coded in Java: player collect and deliver money to bank
-                            without touching police. Implemented search algorithms including A-Star search and used
-                            Object-Oriented Programming</p>
-                        <div class="text-center">
-                            <a href="https://github.com/terrencekliu/Cops-and-Robber-Project.git"
-                               class="btn btn-success">Link</a>
-                        </div>
-                    </div>
-                </div>
-                <br>
-            </div>
-
-            <div class="col-lg-6 mt-6">
-                <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/portfolioImage4.jpeg" alt="Screenshot of Basic Shell"
-                         style="width:100%">
-                    <div class="card-body">
-                        <h4 class="card-title">Basic Shell</h4>
-                        <p class="card-text">Programmed a simple shell program in C: can accept many inputs to do a
-                            variety of shell tasks in Unix. Knowledge of Unix System: child processes, signal
-                            masks/handlers, pipes</p>
-                        <div class="text-center">
-                            <a href="https://github.com/terrencekliu/Basic-Shell.git" class="btn btn-success">Link</a>
-                        </div>
-                    </div>
-                </div>
-                <br>
-            </div>
-
-            <div class="col-lg-6 mt-6">
-                <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/portfolioImage3.jpeg" alt="Screenshot of My Talk Chat"
-                         style="width:100%">
-                    <div class="card-body">
-                        <h4 class="card-title">MyTalk Chat</h4>
-                        <p class="card-text">Mytalk is a program that allows a user on one machine to send and receive
-                            messages from another user on another machine. The program splits the screen into two parts,
-                            receiver/sender. </p>
+                        <h4 class="card-title">My tinyFileSystem</h4>
+                        <p class="card-text">My tinyFileSystem is based off of the UFS Hybrid Filesystem. The first
+                            FileExtent block address is stored in the Inode, and other FileExtent block addresses are
+                            stored in the InodeIndex (stores all other FileExtent addresses). Features include CBC
+                            encryption to secure the file system, READ and READ_WRITE protection, timestamp for
+                            creation, change, access, and modify time, and terminal output debug mode.
+                        </p>
                         <div class="text-center">
                             <a href="https://github.com/terrencekliu/MyTalk-Chat.git" class="btn btn-success">Link</a>
                         </div>
@@ -376,6 +343,41 @@
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="col-lg-6 mt-6">
+                <div class="card portfolioContent">
+                    <img class="card-img-top" src="images/portfolioImage4.jpeg" alt="Screenshot of Basic Shell"
+                         style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Basic Shell</h4>
+                        <p class="card-text">Programmed a simple shell program in C: can accept many inputs to do a
+                            variety of shell tasks in Unix. Knowledge of Unix System: child processes, signal
+                            masks/handlers, pipes</p>
+                        <div class="text-center">
+                            <a href="https://github.com/terrencekliu/Basic-Shell.git" class="btn btn-success">Link</a>
+                        </div>
+                    </div>
+                </div>
+                <br>
+            </div>
+
+            <div class="col-lg-6 mt-6">
+                <div class="card portfolioContent">
+                    <img class="card-img-top" src="images/portfolioImage1.jpeg" alt="Screenshot of Cops and Robber game"
+                         style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Cops and Robber</h4>
+                        <p class="card-text">An interactive game coded in Java: player collect and deliver money to bank
+                            without touching police. Implemented search algorithms including A-Star search and used
+                            Object-Oriented Programming</p>
+                        <div class="text-center">
+                            <a href="https://github.com/terrencekliu/Cops-and-Robber-Project.git"
+                               class="btn btn-success">Link</a>
+                        </div>
+                    </div>
+                </div>
+                <br>
             </div>
         </div>
     </div>
