--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div class="small-container">
         <h1 class="text-center">Skills/Coursework</h1>
         <br>
-        <div class="row">
+        <br class="row">
             <div class="col-lg-6 mt-6">
                 <div class="card servicesText">
                     <div class="card-body">
@@ -141,6 +141,7 @@
                     </div>
                 </div>
             </div>
+            <br>
             <div class="col-lg-6 mt-6">
                 <div class="card servicesText">
                     <div class="card-body">
@@ -168,10 +169,23 @@
         <br>
         <div class="card servicesText">
             <div class="card-body">
+                <h4 class="card-title">Software Developer</h4>
+                <i class="text-secondary">
+                    Amazon • Full-time<br>
+                    May 2024 – Present<br>
+                    Seattle, WA
+                </i>
+                <p class="card-text"><br>Work in a team to maintain and update backend and frontend of Publisher
+                    Experience of Amazon Books</p>
+            </div>
+        </div>
+        <br>
+        <div class="card servicesText">
+            <div class="card-body">
                 <h4 class="card-title">Jr. Software Developer</h4>
                 <i class="text-secondary">
                     Amazon • Part-time School, Full-time Summer<br>
-                    Apr 2022 – Present<br>
+                    Apr 2022 – Apr 2024<br>
                     San Luis Obispo, CA
                 </i>
                 <p class="card-text"><br>Work in a team to maintain and update backend and frontend of Publisher
