Update content type in html to text/html

--- a/personal/one-bus-notification/one-bus-notification.html
+++ b/personal/one-bus-notification/one-bus-notification.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" content="application/json">
+    <meta charset="UTF-8" content="text/html">
     <title>One Bus Away – Script</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
