--- a/personal/resume/resume.html
+++ b/personal/resume/resume.html
@@ -69,7 +69,7 @@
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                 <h2 class="hero_title">Hi, I'm Terrence</h2>
-                <p class="hero_desc">Studying Computer Science at Cal Poly SLO</p>
+                <p class="hero_desc">A Software Engineer in Seattle</p>
             </div>
         </div>
     </div>
